--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
                   <li><a href="{{ url_for('index') }}">Inicio</a></li>
                   <li><a href="{{ url_for('nosotros') }}">Nosotros</a></li>
                   <li><a href="{{ url_for('contacto') }}">Contacto</a></li>
-                  <li><a href="{{ url_for('carrito') }}">Carrito</a></li>
+                  <li><a href="{{ url_for('login') }}">admin</a></li>
               </ul>
             </div>
             <div class="content">
                 <h1>DESCUBRE LA MAGIA DE <br> DISNEY WORLD</h1>
                 <div>
-                    <a href="{{ url_for('login') }}" class="boton">EMPIEZA</a>
+                    <a href="{{ url_for('empezar') }}" class="boton">EMPIEZA</a>
                 </div>
             </div>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
