--- a/templates/Contacto.html
+++ b/templates/Contacto.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{ url_for('static', filename='img/icons8-favourite-website-48.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='contacto.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">  
+
     <title>Descubre la Magia</title>
 </head>
 <body>
@@ -15,14 +17,12 @@
                 <li><a href="{{ url_for('index') }}">Inicio</a></li>
                 <li><a href="{{ url_for('nosotros') }}">Nosotros</a></li>
                 <li><a href="{{ url_for('contacto') }}">Contacto</a></li>
-                <li><a href="{{ url_for('carrito') }}">Carrito</a></li>
             </ul>
         </div>
-        <h1>Formulario de Contacto</h1>
+        <h1>¿Tienes una Consulta? ¡Escríbenos!</h1>
     </header>
     
     <main>
-        <h1>Formulario de Reserva</h1>
   <form action="/submit-reservation" method="POST">
     <label for="name">Nombre:</label><br>
     <input type="text" id="name" name="name" required><br><br>
@@ -33,35 +33,18 @@
     <label for="phone">Teléfono:</label><br>
     <input type="tel" id="phone" name="phone" required><br><br>
 
-    <label for="date">Fecha de la Reserva:</label><br>
-    <input type="date" id="date" name="date" required><br><br>
-
-    <label for="time">Hora de la Reserva:</label><br>
-    <input type="time" id="time" name="time" required><br><br>
-
     <label for="message">Mensaje o Detalles:</label><br>
     <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
     <button type="submit">Enviar Reserva</button>
   </form>
-        <script>
-            function submitForm() {
-                const fname = document.getElementById("fname").value;
-                const lname = document.getElementById("lname").value;
-                const email = document.getElementById("email").value;
-                const message = document.getElementById("message").value;
 
-                // Enviamos los datos a confirmacion.html a través de URL
-                window.location.href = `{{ url_for('confirmacion') }}?fname=${encodeURIComponent(fname)}&lname=${encodeURIComponent(lname)}&email=${encodeURIComponent(email)}&message=${encodeURIComponent(message)}`;
-
-                // Evitamos el envío del formulario por defecto
-                return false;
-            }
-        </script>
         
-        <div style="text-align: center;">
-            <a href="https://wa.me/+5491159545781" target="_blank" style="background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border-radius: 5px;">WhatsApp</a>
-        </div>
+  <div name="w" style="text-align: center;">  
+    <a href="https://wa.me/+5491159545781"  target="_blank"  >  
+        <i class="fab fa-whatsapp" style="margin-right: 8px;"></i> WhatsApp  
+    </a>  
+</div>      
     </main>
     
     <footer>
